--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.3.0",
+    "@react-spring/three": "^10.0.1",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.19.2",
     "lucide-react": "^0.525.0",
     "pdfjs-dist": "^3.9.179",
     "react": "^19.1.0",
@@ -30,19 +30,25 @@
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "react-tooltip": "^5.29.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
     "@types/node": "^24.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "framer-motion": "^12.23.6",
     "globals": "^16.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "three": "^0.178.0",
     "tw-animate-css": "^1.3.4",
     "vite": "^7.0.0"
   }
