--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "pdfjs-dist": "^3.9.179",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-pdf": "^10.0.1",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "react-tooltip": "^5.29.1",
     "recharts": "^3.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
