--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "grapheme-splitter": "^1.0.4",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^3.9.179",
