--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.3.0",
     "@react-spring/three": "^10.0.1",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "grapheme-splitter": "^1.0.4",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^3.9.179",
     "prop-types": "^15.8.1",
