--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "dotenv": "^17.2.1",
     "grapheme-splitter": "^1.0.4",
     "lucide-react": "^0.525.0",
@@ -58,7 +59,7 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "framer-motion": "^12.23.6",
+    "framer-motion": "^12.23.12",
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
